--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,32 @@
 /* You can add global styles to this file, and also import other style files */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+html, body {
+  width: 100%;
+  height: 100%;
+  line-height: 1;
+  background: none;
+  color: inherit;
+  font-family: system-ui, sans-serif;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+.wrapper {
+  width: 100%;
+  height: 100dvh;
+  background-size: cover;
+  background-position: 50% 100%;
+  background-image: url("../public/3d08de_e368b4efea384741bfd17edbee12c487~mv2.webp");
+}
